--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -45,11 +45,19 @@
 
 .menos,
 .mas {
-  width: 24px;
-  height: 24px;
+  width: 26px;
+  height: 26px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 0;
   border-radius: 4px;
-  border: 1px solid;
+  font-size: 16px;
   font-weight: bold;
+  line-height: 1;
+
+  background-color: #fff;
   cursor: pointer;
   
 }
