--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,3 +1,9 @@
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
 .banner {
   width: 100%;
   height: 300px;        /* altura del banner */
