--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -1,5 +1,10 @@
+
+
 .pedido {
-  width: 780px;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
 
