--- a/src/components/LoginPage.module.css
+++ b/src/components/LoginPage.module.css
@@ -1,3 +1,10 @@
+body {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
 .login{
     display: flex;
     flex-direction: column;
