--- a/src/components/Producto.css
+++ b/src/components/Producto.css
@@ -1,3 +1,10 @@
+body {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
 .producto-img {
   height: 180px;
   object-fit: cover;
